# python-backend-demo

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
demo_app/: __main__.py  settings.py
demo_app/db/: asyncpg_database.py
demo_app/db/models/: database_base.py  measurement.py
demo_app/http_server/: app.py  dependencies.py  dto_base_model.py
demo_app/http_server/routes/: measurements.py
tests/integration/: conftest.py  test_acceptance_store_and_retrieve.py  test_asyncpg_database.py  test_root_route.py
tests/unit/: conftest.py
tests/unit/http_server/: test_post_measurements.py
