[tool.poetry]
name = "python-project-demo"
version = "0.1.0"
description = "Demonstration of how I think a good Python backend project should look like"
authors = ["Ilari Mäkimattila <ilari.makimattila@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pydantic = "^2.5.1"
uvicorn = {version = "^0.24.0.post1", extras = ["standard"]}
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"
pytest-xdist = "^3.4.0"
httpx = "^0.25.1"
mypy = "^1.7.0"
faker = "^20.0.3"
pytest-asyncio = "^0.21.1"
asyncpg-stubs = "^0.29.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "-pno:cacheprovider",
    "-nauto",
]
python_functions = "*should_* test_* *_test"
testpaths = "tests"
